fix:overflowing elements from screen

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,11 +1,11 @@
 .App {
   box-sizing: border-box;
-  /* align-items: center; */
+  align-items: center;
   color: #b8b6b4;
   font-size: 1.4rem;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between; */
+  justify-content: space-between;
   height: 100%;
   position: relative;
   text-align: center;
