--- a/client/src/styles/main-styles/main.css
+++ b/client/src/styles/main-styles/main.css
@@ -1,8 +1,9 @@
 .main__container{
-	height: 100%;
 	color: black;
 	overflow:hidden;
 	position: relative;
+	height:100%;
+	width: 100%;
 }
 
 .draggable__container{
